# CS7643-4644-Project

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  evaluate.py  example.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_import.py  train.py
config/: dqn_config.yaml
src/: __init__.py  analysis_compare_models.py  analysis_compare_models_colab.ipynb  analysis_friends_effect.py  analysis_models_friends.py  analysis_models_friends_colab.ipynb  analysis_overall_train_to_transfer.ipynb  analysis_transfer_statistics.ipynb  distributional_dqn_agent.py  dqn_agent.py  dueling_dqn_agent.py  gpu_utils.py  hand_eval.py  letitride_env.py  msstud_env.py  msstud_kisenwether_strategy.py  msstud_spiel_shim.py  ppo_agent.py  qlearning_tabular.py  simulate.py  spiel_rollout.py  stat_results_lir_eval.json  stat_results_ms_eval.json  tq2.py
src/agents/: __init__.py  dqn_agent.py
src/environment/: __init__.py  poker_env.py
src/examples/: run_random_msstud_spiel.py
src/networks/: __init__.py  networks.py
src/results_backup/train10000_test2000/: friends_effect_stats.json  model_vs_model_stats.json  performance_results.json
src/results_backup/train100k_test10k/: friends_effect_stats.json  model_vs_model_stats.json  performance_results.json
src/results_backup/transfer_100k/: results_lir.json  results_ms.json
src/results_backup/transfer_100k/weights_lir/: distdqn_lir_scratch.pth  distdqn_lir_transfer_from_ms.pth  dqn_lir_scratch.pth  dqn_lir_transfer_from_ms.pth  dueling_lir_scratch.pth  dueling_lir_transfer_from_ms.pth  ppo_lir_scratch.pth  ppo_lir_transfer_from_ms.pth
src/results_backup/transfer_200k/: results_lir.json  results_ms.json
src/utils/: __init__.py  replay_buffer.py
src/weights_lir/: distdqn_lir_scratch.pth  dqn_lir_transfer_from_ms.pth  dueling_lir_transfer_from_ms.pth
src/weights_ms/: dueling_ms_lowlr.pth
tests/: README.md  __init__.py  test_basic.py  test_dqn_agent.py  test_dueling_dqn_agent.py  test_friends_feature.py  test_hand_eval.py  test_kisenwether_strategy.py  test_msstud_env_core.py  test_msstud_env_payouts.py  test_ppo_agent.py  test_shuffle.py  test_spiel_shim.py  test_tabular_q_agent.py  test_tq2_agent.py
(+12 files in other folders)
